--- a/css/style.css
+++ b/css/style.css
@@ -787,6 +787,12 @@ z-index: 1;
     height: 120px;
     animation: spin 2s linear infinite;
   }
+
+
+.loader-search{
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
   
   @keyframes spin {
     0% { transform: rotate(0deg); }
